--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -177,24 +177,24 @@
                     </div>
                 `;
 
-                card.addEventListener('click', flipCard);
+                card.addEventListener('click', () => flipCard(card));
                 return card;
             }
 
             // Função para virar uma carta
-            function flipCard() {
+            function flipCard(card) {
                 if (lockBoard) return; // Se o tabuleiro estiver bloqueado, não faz nada
-                if (this === firstCard) return; // Se a mesma carta for clicada novamente, não faz nada
+                if (card === firstCard) return; // Se a mesma carta for clicada novamente, não faz nada
 
-                this.classList.add('flipped'); // Vira a carta
+                card.classList.add('flipped'); // Vira a carta
 
                 if (!hasFlippedCard) {
                     hasFlippedCard = true;
-                    firstCard = this; // Armazena a primeira carta virada
+                    firstCard = card; // Armazena a primeira carta virada
                     return;
                 }
 
-                secondCard = this; // Armazena a segunda carta virada
+                secondCard = card; // Armazena a segunda carta virada
                 checkForMatch(); // Verifica se as cartas são iguais
             }
 
@@ -208,8 +208,8 @@
 
             // Se as cartas forem iguais, desativa o evento de clique nelas
             function disableCards() {
-                firstCard.removeEventListener('click', flipCard);
-                secondCard.removeEventListener('click', flipCard);
+                firstCard.removeEventListener('click', () => flipCard(firstCard));
+                secondCard.removeEventListener('click', () => flipCard(secondCard));
 
                 resetBoard();
             }
