--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -33,8 +33,8 @@
         }
 
         .card {
-            width: 100%;
-            padding-top: 100%; /* Mantém a proporção 1:1 */
+            width: 100px; /* Largura fixa */
+            height: 100px; /* Altura fixa */
             position: relative;
             perspective: 1000px;
         }
@@ -145,7 +145,6 @@
             let lockBoard = false;
             let firstCard, secondCard;
 
-            // Carrega os dados e inicializa as cartas
             async function loadGameData() {
                 const response = await fetch('palavras.txt');
                 const data = await response.text();
@@ -162,7 +161,6 @@
                 cards.forEach(card => gameBoard.appendChild(card));
             }
 
-            // Cria uma carta com o conteúdo especificado (imagem ou texto)
             function createCard(content, type) {
                 const card = document.createElement('div');
                 card.classList.add('card');
@@ -181,24 +179,22 @@
                 return card;
             }
 
-            // Função para virar uma carta
             function flipCard(card) {
-                if (lockBoard) return; // Se o tabuleiro estiver bloqueado, não faz nada
-                if (card === firstCard) return; // Se a mesma carta for clicada novamente, não faz nada
+                if (lockBoard) return; 
+                if (card === firstCard) return;
 
-                card.classList.add('flipped'); // Vira a carta
+                card.classList.add('flipped'); 
 
                 if (!hasFlippedCard) {
                     hasFlippedCard = true;
-                    firstCard = card; // Armazena a primeira carta virada
+                    firstCard = card; 
                     return;
                 }
 
-                secondCard = card; // Armazena a segunda carta virada
-                checkForMatch(); // Verifica se as cartas são iguais
+                secondCard = card; 
+                checkForMatch(); 
             }
 
-            // Verifica se as duas cartas viradas são iguais
             function checkForMatch() {
                 let isMatch = firstCard.querySelector('.card-front').innerHTML === secondCard.querySelector('.card-front').innerHTML;
 
@@ -206,7 +202,6 @@
                 updateMoveCounter();
             }
 
-            // Se as cartas forem iguais, desativa o evento de clique nelas
             function disableCards() {
                 firstCard.removeEventListener('click', () => flipCard(firstCard));
                 secondCard.removeEventListener('click', () => flipCard(secondCard));
@@ -214,9 +209,8 @@
                 resetBoard();
             }
 
-            // Se as cartas não forem iguais, desvira ambas após um breve intervalo
             function unflipCards() {
-                lockBoard = true; // Bloqueia o tabuleiro para impedir novos cliques
+                lockBoard = true; 
 
                 setTimeout(() => {
                     firstCard.classList.remove('flipped');
@@ -226,19 +220,16 @@
                 }, 1500);
             }
 
-            // Reseta as variáveis de controle para permitir a próxima tentativa
             function resetBoard() {
                 [hasFlippedCard, lockBoard] = [false, false];
                 [firstCard, secondCard] = [null, null];
             }
 
-            // Atualiza o contador de movimentos
             function updateMoveCounter() {
                 moves++;
                 moveCounter.textContent = moves;
             }
 
-            // Reinicia o jogo
             restartButton.addEventListener('click', () => {
                 gameBoard.innerHTML = '';
                 moves = 0;
@@ -246,12 +237,10 @@
                 loadGameData();
             });
 
-            // Botão para voltar à página anterior
             backButton.addEventListener('click', () => {
                 window.history.back();
             });
 
-            // Carrega os dados do jogo e inicializa as cartas ao carregar a página
             loadGameData();
         });
     </script>
