--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -13,10 +13,13 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            padding: 20px;
+            box-sizing: border-box;
         }
 
         .container {
             text-align: center;
+            max-width: 100%;
         }
 
         h1 {
@@ -26,15 +29,16 @@
 
         .game-board {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
             gap: 10px;
+            width: 100%;
             max-width: 600px;
             margin: 0 auto;
         }
 
         .card {
-            width: 100px; /* Largura fixa */
-            height: 100px; /* Altura fixa */
+            width: 100%;
+            padding-top: 100%; /* Mantém a proporção 1:1 */
             position: relative;
             perspective: 1000px;
         }
@@ -83,6 +87,7 @@
             align-items: center;
             padding: 10px;
             box-sizing: border-box;
+            text-align: center;
         }
 
         .card-front img {
@@ -92,19 +97,22 @@
         }
 
         .card-front p {
-            font-size: 1.2em;
+            font-size: calc(10px + 1vw); /* Ajuste dinâmico do tamanho da fonte */
             text-align: center;
             margin: 0;
             word-wrap: break-word;
+            max-height: 100%;
+            overflow: hidden;
         }
 
         .controls {
             margin-top: 20px;
+            display: flex;
+            justify-content: space-around;
         }
 
         button {
             padding: 10px 20px;
-            margin: 5px;
             font-size: 1em;
             cursor: pointer;
         }
@@ -129,8 +137,8 @@
         <div class="controls">
             <button id="restart-button">Restart Game</button>
             <button id="back-button">Back</button>
-            <p>Moves: <span id="move-counter">0</span></p>
         </div>
+        <p>Moves: <span id="move-counter">0</span></p>
     </div>
 
     <script>
@@ -198,11 +206,16 @@
             function checkForMatch() {
                 let isMatch = firstCard.querySelector('.card-front').innerHTML === secondCard.querySelector('.card-front').innerHTML;
 
-                isMatch ? disableCards() : unflipCards();
+                if (isMatch) {
+                    disableCards();
+                } else {
+                    unflipCards();
+                }
                 updateMoveCounter();
             }
 
             function disableCards() {
+                // Desativa os eventos de clique nas cartas corretas
                 firstCard.removeEventListener('click', () => flipCard(firstCard));
                 secondCard.removeEventListener('click', () => flipCard(secondCard));
 
@@ -210,7 +223,7 @@
             }
 
             function unflipCards() {
-                lockBoard = true; 
+                lockBoard = true; // Bloqueia o tabuleiro enquanto as cartas são desviradas
 
                 setTimeout(() => {
                     firstCard.classList.remove('flipped');
