--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -27,6 +27,13 @@
             margin-bottom: 20px;
         }
 
+        .controls {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
         .game-board {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
@@ -105,12 +112,6 @@
             overflow: hidden;
         }
 
-        .controls {
-            margin-top: 20px;
-            display: flex;
-            justify-content: space-around;
-        }
-
         button {
             padding: 10px 20px;
             font-size: 1em;
@@ -132,11 +133,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hannah Memory Game</h1>
+        <div class="controls">
+            <button id="back-button">Back</button>
+            <h1>Hannah Memory Game</h1>
+        </div>
         <div id="game-board" class="game-board"></div>
         <div class="controls">
             <button id="restart-button">Restart Game</button>
-            <button id="back-button">Back</button>
         </div>
         <p>Moves: <span id="move-counter">0</span></p>
     </div>
