--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             background-color: #f9f9f9;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
             height: 100vh;
             margin: 0;
@@ -19,28 +19,40 @@
 
         .container {
             text-align: center;
-            max-width: 100%;
+            width: 100%;
+            max-width: 600px;
+        }
+
+        .header {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+        }
+
+        #back-button {
+            align-self: flex-start;
+            background-color: #f44336;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 1em;
+            cursor: pointer;
+            margin-bottom: 10px;
         }
 
         h1 {
             font-size: 2em;
-            margin-bottom: 20px;
-        }
-
-        .controls {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
+            margin: 0;
+            padding-bottom: 10px;
         }
 
         .game-board {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
             gap: 10px;
-            width: 100%;
-            max-width: 600px;
-            margin: 0 auto;
+            margin-bottom: 20px;
+            padding: 0;
         }
 
         .card {
@@ -112,28 +124,25 @@
             overflow: hidden;
         }
 
-        button {
-            padding: 10px 20px;
-            font-size: 1em;
-            cursor: pointer;
-        }
-
-        button#back-button {
-            background-color: #f44336;
-            color: white;
-            border: none;
+        .controls {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
         }
 
         button#restart-button {
             background-color: #4CAF50;
             color: white;
             border: none;
+            padding: 10px 20px;
+            font-size: 1em;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="controls">
+        <div class="header">
             <button id="back-button">Back</button>
             <h1>Hannah Memory Game</h1>
         </div>
@@ -219,8 +228,8 @@
 
             function disableCards() {
                 // Desativa os eventos de clique nas cartas corretas
-                firstCard.removeEventListener('click', () => flipCard(firstCard));
-                secondCard.removeEventListener('click', () => flipCard(secondCard));
+                firstCard.removeEventListener('click', flipCard);
+                secondCard.removeEventListener('click', flipCard);
 
                 resetBoard();
             }
