--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -11,7 +11,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            height: 100vh;
+            justify-content: center;
+            min-height: 100vh;
             margin: 0;
             padding: 20px;
             box-sizing: border-box;
@@ -28,6 +29,7 @@
             flex-direction: column;
             align-items: center;
             width: 100%;
+            margin-bottom: 20px;
         }
 
         #back-button {
@@ -51,13 +53,14 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
             gap: 10px;
-            margin-bottom: 20px;
-            padding: 0;
+            width: 100%;
+            max-width: 600px;
+            margin: 0 auto 20px;
         }
 
         .card {
             width: 100%;
-            padding-top: 100%; /* Mantém a proporção 1:1 */
+            padding-top: 100%;
             position: relative;
             perspective: 1000px;
         }
@@ -116,7 +119,7 @@
         }
 
         .card-front p {
-            font-size: calc(10px + 1vw); /* Ajuste dinâmico do tamanho da fonte */
+            font-size: calc(10px + 1vw);
             text-align: center;
             margin: 0;
             word-wrap: break-word;
@@ -125,7 +128,6 @@
         }
 
         .controls {
-            margin-top: 20px;
             display: flex;
             justify-content: center;
         }
@@ -165,10 +167,19 @@
             let lockBoard = false;
             let firstCard, secondCard;
 
-            async function loadGameData() {
-                const response = await fetch('palavras.txt');
-                const data = await response.text();
-                const pairs = data.trim().split('\n').map(line => line.split(','));
+            function loadGameData() {
+                const pairs = [
+                    ["imagem1.jpeg", "BATTLEFIELD"],
+                    ["imagem2.jpeg", "GIANT"],
+                    ["imagem3.jpeg", "FEAR"],
+                    ["imagem4.jpeg", "BRAVE"],
+                    ["imagem5.jpeg", "SHEPHERD"],
+                    ["imagem6.jpeg", "SOLDIER"],
+                    ["imagem7.jpeg", "SHOUTING"],
+                    ["imagem8.jpeg", "STONES"],
+                    ["imagem9.jpeg", "SLINGSHOT"],
+                    ["imagem10.jpeg", "FOREHEAD"]
+                ];
 
                 const cards = [];
                 pairs.forEach(pair => {
@@ -212,6 +223,7 @@
                 }
 
                 secondCard = card; 
+                lockBoard = true;
                 checkForMatch(); 
             }
 
@@ -227,20 +239,15 @@
             }
 
             function disableCards() {
-                // Desativa os eventos de clique nas cartas corretas
                 firstCard.removeEventListener('click', flipCard);
                 secondCard.removeEventListener('click', flipCard);
-
                 resetBoard();
             }
 
             function unflipCards() {
-                lockBoard = true; // Bloqueia o tabuleiro enquanto as cartas são desviradas
-
                 setTimeout(() => {
                     firstCard.classList.remove('flipped');
                     secondCard.classList.remove('flipped');
-
                     resetBoard();
                 }, 1500);
             }
