--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -11,8 +11,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            min-height: 100vh;
+            justify-content: flex-start;
+            height: 100vh;
             margin: 0;
             padding: 20px;
             box-sizing: border-box;
@@ -29,7 +29,7 @@
             flex-direction: column;
             align-items: center;
             width: 100%;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
 
         #back-button {
@@ -54,8 +54,7 @@
             grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
             gap: 10px;
             width: 100%;
-            max-width: 600px;
-            margin: 0 auto 20px;
+            margin-bottom: 20px;
         }
 
         .card {
@@ -128,6 +127,7 @@
         }
 
         .controls {
+            margin-top: 20px;
             display: flex;
             justify-content: center;
         }
@@ -211,20 +211,20 @@
             }
 
             function flipCard(card) {
-                if (lockBoard) return; 
+                if (lockBoard) return;
                 if (card === firstCard) return;
 
-                card.classList.add('flipped'); 
+                card.classList.add('flipped');
 
                 if (!hasFlippedCard) {
                     hasFlippedCard = true;
-                    firstCard = card; 
+                    firstCard = card;
                     return;
                 }
 
-                secondCard = card; 
+                secondCard = card;
                 lockBoard = true;
-                checkForMatch(); 
+                checkForMatch();
             }
 
             function checkForMatch() {
