--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -54,6 +54,7 @@
             grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
             gap: 10px;
             width: 100%;
+            max-width: 600px;
             margin-bottom: 20px;
         }
 
@@ -167,20 +168,20 @@
             let lockBoard = false;
             let firstCard, secondCard;
 
-            function loadGameData() {
-                const pairs = [
-                    ["imagem1.jpeg", "BATTLEFIELD"],
-                    ["imagem2.jpeg", "GIANT"],
-                    ["imagem3.jpeg", "FEAR"],
-                    ["imagem4.jpeg", "BRAVE"],
-                    ["imagem5.jpeg", "SHEPHERD"],
-                    ["imagem6.jpeg", "SOLDIER"],
-                    ["imagem7.jpeg", "SHOUTING"],
-                    ["imagem8.jpeg", "STONES"],
-                    ["imagem9.jpeg", "SLINGSHOT"],
-                    ["imagem10.jpeg", "FOREHEAD"]
-                ];
+            const pairs = [
+                ["imagem1.jpeg", "BATTLEFIELD"],
+                ["imagem2.jpeg", "GIANT"],
+                ["imagem3.jpeg", "FEAR"],
+                ["imagem4.jpeg", "BRAVE"],
+                ["imagem5.jpeg", "SHEPHERD"],
+                ["imagem6.jpeg", "SOLDIER"],
+                ["imagem7.jpeg", "SHOUTING"],
+                ["imagem8.jpeg", "STONES"],
+                ["imagem9.jpeg", "SLINGSHOT"],
+                ["imagem10.jpeg", "FOREHEAD"]
+            ];
 
+            function loadGameData() {
                 const cards = [];
                 pairs.forEach(pair => {
                     const imageCard = createCard(pair[0], 'image');
