--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -11,7 +11,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: flex-start;
+            justify-content: center;
             height: 100vh;
             margin: 0;
             padding: 20px;
@@ -20,20 +20,15 @@
 
         .container {
             text-align: center;
-            width: 100%;
             max-width: 600px;
+            width: 100%;
         }
 
         .header {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
 
         #back-button {
-            align-self: flex-start;
             background-color: #f44336;
             color: white;
             border: none;
@@ -51,10 +46,8 @@
 
         .game-board {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+            grid-template-columns: repeat(4, 1fr);
             gap: 10px;
-            width: 100%;
-            max-width: 600px;
             margin-bottom: 20px;
         }
 
@@ -71,7 +64,6 @@
             height: 100%;
             transform-style: preserve-3d;
             transition: transform 0.6s;
-            cursor: pointer;
         }
 
         .card.flipped .card-inner {
@@ -128,7 +120,6 @@
         }
 
         .controls {
-            margin-top: 20px;
             display: flex;
             justify-content: center;
         }
