--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -7,266 +7,261 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
             margin: 0;
-            padding: 20px;
-            box-sizing: border-box;
+            background-color: #f0f0f0;
         }
-
-        .container {
-            text-align: center;
-            max-width: 600px;
-            width: 100%;
-        }
-
-        .header {
-            margin-bottom: 20px;
-        }
-
         #back-button {
-            background-color: #f44336;
+            margin-bottom: 10px;
+            padding: 10px 20px;
+            background-color: #3498db;
             color: white;
             border: none;
-            padding: 10px 20px;
-            font-size: 1em;
+            border-radius: 5px;
             cursor: pointer;
+            font-size: 1em;
+        }
+        h1 {
             margin-bottom: 10px;
         }
-
-        h1 {
-            font-size: 2em;
-            margin: 0;
-            padding-bottom: 10px;
-        }
-
-        .game-board {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
+        #move-counter {
             margin-bottom: 20px;
+            font-size: 1.2em;
         }
-
-        .card {
+        #memory-game {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            grid-gap: 10px;
             width: 100%;
-            padding-top: 100%;
-            position: relative;
-            perspective: 1000px;
+            max-width: 600px;
         }
-
+        .card {
+            position: relative;
+            width: 100%;
+            padding-top: 100%; /* Aspect ratio 1:1 */
+            perspective: 1000px; /* Perspective for 3D effect */
+        }
         .card-inner {
             position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
-            transform-style: preserve-3d;
             transition: transform 0.6s;
+            transform-style: preserve-3d;
+            cursor: pointer;
         }
-
         .card.flipped .card-inner {
             transform: rotateY(180deg);
         }
-
         .card-front, .card-back {
             position: absolute;
             width: 100%;
             height: 100%;
             backface-visibility: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: calc(10px + 2vmin); /* Dynamic font size based on viewport size */
+            text-transform: uppercase;
+            text-align: center;
+            box-sizing: border-box;
+            padding: 10px;
         }
-
-        .card-back {
-            background-color: #4CAF50;
+        .card-front {
+            background-color: #3498db;
+            color: white;
         }
-
-        .card-back img {
+        .card-front img {
             max-width: 80%;
             max-height: 80%;
             object-fit: contain;
         }
-
-        .card-front {
+        .card-back {
+            background-color: #2ecc71;
             transform: rotateY(180deg);
-            background-color: #ffffff;
-            border: 2px solid #4CAF50;
+        }
+        .card img {
+            max-width: 80%;
+            max-height: 80%;
+            object-fit: contain;
+        }
+        .card .word {
             display: flex;
             justify-content: center;
             align-items: center;
-            padding: 10px;
-            box-sizing: border-box;
-            text-align: center;
-        }
-
-        .card-front img {
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: contain;
-        }
-
-        .card-front p {
-            font-size: calc(10px + 1vw);
-            text-align: center;
-            margin: 0;
+            font-size: 2.5vmin;
+            width: 100%;
+            height: 100%;
             word-wrap: break-word;
-            max-height: 100%;
-            overflow: hidden;
+            white-space: normal;
+            text-align: center;
         }
-
-        .controls {
-            display: flex;
-            justify-content: center;
-        }
-
-        button#restart-button {
-            background-color: #4CAF50;
+        #restart-button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #2ecc71;
             color: white;
             border: none;
-            padding: 10px 20px;
-            font-size: 1em;
+            border-radius: 5px;
             cursor: pointer;
+            font-size: 1em;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <button id="back-button">Back</button>
-            <h1>Hannah Memory Game</h1>
-        </div>
-        <div id="game-board" class="game-board"></div>
-        <div class="controls">
-            <button id="restart-button">Restart Game</button>
-        </div>
-        <p>Moves: <span id="move-counter">0</span></p>
+    <button id="back-button" onclick="goBack()">Back</button>
+    <h1>Hannah Memory Game</h1>
+    <div id="move-counter">Moves: 0</div>
+    <div id="memory-game">
+        <!-- Cards will be dynamically generated here -->
     </div>
+    <button id="restart-button" onclick="restartGame()">Restart Game</button>
 
     <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const gameBoard = document.getElementById("game-board");
-            const restartButton = document.getElementById("restart-button");
-            const backButton = document.getElementById("back-button");
-            const moveCounter = document.getElementById("move-counter");
+        const gameContainer = document.getElementById('memory-game');
+        const moveCounterElement = document.getElementById('move-counter');
+        let moves = 0;
+        let firstCard = null;
+        let secondCard = null;
+        let lockBoard = false;
 
-            let moves = 0;
-            let hasFlippedCard = false;
-            let lockBoard = false;
-            let firstCard, secondCard;
-
-            const pairs = [
-                ["imagem1.jpeg", "BATTLEFIELD"],
-                ["imagem2.jpeg", "GIANT"],
-                ["imagem3.jpeg", "FEAR"],
-                ["imagem4.jpeg", "BRAVE"],
-                ["imagem5.jpeg", "SHEPHERD"],
-                ["imagem6.jpeg", "SOLDIER"],
-                ["imagem7.jpeg", "SHOUTING"],
-                ["imagem8.jpeg", "STONES"],
-                ["imagem9.jpeg", "SLINGSHOT"],
-                ["imagem10.jpeg", "FOREHEAD"]
-            ];
-
-            function loadGameData() {
-                const cards = [];
-                pairs.forEach(pair => {
-                    const imageCard = createCard(pair[0], 'image');
-                    const textCard = createCard(pair[1], 'text');
-                    cards.push(imageCard, textCard);
+        function loadCardsData(callback) {
+            fetch('palavras.txt')
+                .then(response => response.text())
+                .then(text => {
+                    const cardsArray = [];
+                    const lines = text.split('\n');
+                    for (let i = 1; i < lines.length; i++) { // start from 1 to skip header
+                        const [type, src_or_text, pair] = lines[i].split(',');
+                        if (type && src_or_text && pair) {
+                            cardsArray.push({
+                                type: type.trim(),
+                                src: type.trim() === 'image' ? src_or_text.trim() : null,
+                                text: type.trim() === 'word' ? src_or_text.trim() : null,
+                                pair: pair.trim()
+                            });
+                        }
+                    }
+                    callback(cardsArray);
                 });
+        }
 
-                cards.sort(() => 0.5 - Math.random());
-                cards.forEach(card => gameBoard.appendChild(card));
+        function shuffle(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+            return array;
+        }
+
+        function createCard(cardData) {
+            const card = document.createElement('div');
+            card.classList.add('card');
+            card.dataset.pair = cardData.pair;
+
+            const cardInner = document.createElement('div');
+            cardInner.classList.add('card-inner');
+
+            const cardFront = document.createElement('div');
+            cardFront.classList.add('card-front');
+            const cardBack = document.createElement('div');
+            cardBack.classList.add('card-back');
+
+            const logo = document.createElement('img');
+            logo.src = 'logo.png';
+            cardFront.appendChild(logo);
+
+            if (cardData.type === 'image') {
+                const img = document.createElement('img');
+                img.src = cardData.src;
+                cardBack.appendChild(img);
+            } else if (cardData.type === 'word') {
+                const word = document.createElement('div');
+                word.classList.add('word');
+                word.textContent = cardData.text;
+                cardBack.appendChild(word);
             }
 
-            function createCard(content, type) {
-                const card = document.createElement('div');
-                card.classList.add('card');
-                card.innerHTML = `
-                    <div class="card-inner">
-                        <div class="card-front">
-                            ${type === 'image' ? `<img src="imagens/${content}" alt="${content}" />` : `<p>${content}</p>`}
-                        </div>
-                        <div class="card-back">
-                            <img src="logo.png" alt="Logo" />
-                        </div>
-                    </div>
-                `;
+            cardInner.appendChild(cardFront);
+            cardInner.appendChild(cardBack);
+            card.appendChild(cardInner);
 
-                card.addEventListener('click', () => flipCard(card));
-                return card;
+            card.addEventListener('click', flipCard);
+            return card;
+        }
+
+        function flipCard() {
+            if (lockBoard) return;
+            if (this.classList.contains('flipped')) return;
+
+            this.classList.add('flipped');
+
+            if (!firstCard) {
+                firstCard = this;
+                return;
             }
 
-            function flipCard(card) {
-                if (lockBoard) return;
-                if (card === firstCard) return;
+            secondCard = this;
+            updateMoveCounter();
+            checkForMatch();
+        }
 
-                card.classList.add('flipped');
+        function checkForMatch() {
+            const isMatch = firstCard.dataset.pair === secondCard.dataset.pair;
 
-                if (!hasFlippedCard) {
-                    hasFlippedCard = true;
-                    firstCard = card;
-                    return;
-                }
+            isMatch ? disableCards() : unflipCards();
+        }
 
-                secondCard = card;
-                lockBoard = true;
-                checkForMatch();
-            }
+        function disableCards() {
+            firstCard.removeEventListener('click', flipCard);
+            secondCard.removeEventListener('click', flipCard);
+            resetBoard();
+        }
 
-            function checkForMatch() {
-                let isMatch = firstCard.querySelector('.card-front').innerHTML === secondCard.querySelector('.card-front').innerHTML;
-
-                if (isMatch) {
-                    disableCards();
-                } else {
-                    unflipCards();
-                }
-                updateMoveCounter();
-            }
-
-            function disableCards() {
-                firstCard.removeEventListener('click', flipCard);
-                secondCard.removeEventListener('click', flipCard);
+        function unflipCards() {
+            lockBoard = true;
+            setTimeout(() => {
+                firstCard.classList.remove('flipped');
+                secondCard.classList.remove('flipped');
                 resetBoard();
-            }
+            }, 1500);
+        }
 
-            function unflipCards() {
-                setTimeout(() => {
-                    firstCard.classList.remove('flipped');
-                    secondCard.classList.remove('flipped');
-                    resetBoard();
-                }, 1500);
-            }
+        function resetBoard() {
+            [firstCard, secondCard] = [null, null];
+            lockBoard = false;
+        }
 
-            function resetBoard() {
-                [hasFlippedCard, lockBoard] = [false, false];
-                [firstCard, secondCard] = [null, null];
-            }
+        function updateMoveCounter() {
+            moves++;
+            moveCounterElement.textContent = `Moves: ${moves}`;
+        }
 
-            function updateMoveCounter() {
-                moves++;
-                moveCounter.textContent = moves;
-            }
-
-            restartButton.addEventListener('click', () => {
-                gameBoard.innerHTML = '';
-                moves = 0;
-                moveCounter.textContent = moves;
-                loadGameData();
+        function initGame(cardsArray) {
+            shuffle(cardsArray).forEach(cardData => {
+                const cardElement = createCard(cardData);
+                gameContainer.appendChild(cardElement);
             });
+            moves = 0;
+            moveCounterElement.textContent = 'Moves: 0';
+        }
 
-            backButton.addEventListener('click', () => {
-                window.history.back();
-            });
+        function restartGame() {
+            gameContainer.innerHTML = '';
+            loadCardsData(initGame);
+        }
 
-            loadGameData();
-        });
+        function goBack() {
+            window.history.back();
+        }
+
+        loadCardsData(initGame);
     </script>
 </body>
 </html>
