--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -24,9 +24,14 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 1em;
+            position: absolute;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
         }
         h1 {
             margin-bottom: 10px;
+            margin-top: 60px; /* Adding space for the back button */
         }
         #move-counter {
             margin-bottom: 20px;
