--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -10,7 +10,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
             height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
@@ -24,18 +24,18 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 1em;
-            position: absolute;
+            position: relative;
             top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
         }
         h1 {
+            margin-top: 20px;
             margin-bottom: 10px;
-            margin-top: 60px; /* Adding space for the back button */
+            text-align: center;
         }
         #move-counter {
             margin-bottom: 20px;
             font-size: 1.2em;
+            text-align: center;
         }
         #memory-game {
             display: grid;
@@ -43,6 +43,7 @@
             grid-gap: 10px;
             width: 100%;
             max-width: 600px;
+            margin-top: 10px;
         }
         .card {
             position: relative;
