--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -126,12 +126,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 2.5vmin;
             width: 100%;
             height: 100%;
             word-wrap: break-word;
             white-space: normal;
             text-align: center;
+            font-size: calc(6px + 2.5vmin); /* Adjusted to fit words better across devices */
         }
 
         #restart-button {
